add moving subscriptions

--- a/driver-pulsar/pom.xml
+++ b/driver-pulsar/pom.xml
@@ -45,7 +45,12 @@
 			<artifactId>pulsar-client-all</artifactId>
 			<version>${pulsar.version}</version>
 		</dependency>
-		
+	
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>	
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
