--- a/driver-api/pom.xml
+++ b/driver-api/pom.xml
@@ -36,5 +36,12 @@
 			<artifactId>bookkeeper-stats-api</artifactId>
 			<version>${bookkeeper.version}</version>
 		</dependency>
+    
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
 	</dependencies>
+
 </project>
