--- a/driver-pulsar/pulsar.yaml
+++ b/driver-pulsar/pulsar.yaml
@@ -22,18 +22,18 @@ driverClass: io.openmessaging.benchmark.driver.pulsar.PulsarBenchmarkDriver
 
 # Pulsar client-specific configuration
 client:
-  serviceUrl: pulsar://localhost:6650
-  httpUrl: http://localhost:8080
-  ioThreads: 8
-  connectionsPerBroker: 8
-  clusterName: local
+  serviceUrl: pulsar://127.0.0.1:6650
+  httpUrl: http://127.0.0.1:8080
+  ioThreads: 1
+  connectionsPerBroker: 1
+  clusterName: standalone
   namespacePrefix: benchmark/ns
-  topicType: persistent
-  persistence:
-    ensembleSize: 3
-    writeQuorum: 3
-    ackQuorum: 2
-    deduplicationEnabled: false
+  topicType: non_persistent
+ # persistence:
+ #   ensembleSize: 1 
+ #   writeQuorum: 1
+ #   ackQuorum: 1
+ #   deduplicationEnabled: false
   tlsAllowInsecureConnection: false
   tlsEnableHostnameVerification: false
   tlsTrustCertsFilePath:
@@ -44,6 +44,6 @@ client:
 # Producer configuration
 producer:
   batchingEnabled: true
-  batchingMaxPublishDelayMs: 1
+  batchingMaxPublishDelayMs: 10
   blockIfQueueFull: true
   pendingQueueSize: 10000
