--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<module>benchmark-framework</module>
 		<module>driver-api</module>
 
-<!--		<module>driver-pulsar</module>-->
+		<module>driver-pulsar</module>
 		<module>driver-kafka</module>
 	<!--	<module>driver-rabbitmq</module>
 		<module>driver-artemis</module>
