--- a/driver-kafka/pom.xml
+++ b/driver-kafka/pom.xml
@@ -47,6 +47,13 @@
 			<artifactId>kafka-clients</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+
 	</dependencies>
 
 </project>
