--- a/benchmark-framework/pom.xml
+++ b/benchmark-framework/pom.xml
@@ -104,7 +104,7 @@
 			<version>${project.version}</version>
 		</dependency>
 
-		<dependency>
+<!--		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>driver-rocketmq</artifactId>
 			<version>${project.version}</version>
@@ -145,7 +145,7 @@
 			<artifactId>driver-nsq</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
+-->
 		<dependency>
 			<groupId>org.apache.bookkeeper.stats</groupId>
 			<artifactId>bookkeeper-stats-api</artifactId>
