1. Parse data from locations.data 2. Create Producer and consumer tasks 3. Collect stats

--- a/benchmark-framework/src/main/resources/log4j2.yaml
+++ b/benchmark-framework/src/main/resources/log4j2.yaml
@@ -30,7 +30,7 @@ Configuration:
         
   Loggers: 
     Root:
-      level: warn
+      level: info
       additivity: false
       AppenderRef:
         ref: Console
