--- a/workloads/1-topic-16-partitions-1kb.yaml
+++ b/workloads/1-topic-16-partitions-1kb.yaml
@@ -28,4 +28,11 @@ consumerPerSubscription: 1
 producersPerTopic: 1
 producerRate: 50000
 consumerBacklogSizeGB: 0
-testDurationMinutes: 15
+testDurationMinutes: 2
+indexConfig:
+  blockSize: 0.001
+  indexType: GEOHASH
+  maxX: 6.185742
+  maxY: 49.638941
+  minX: 6.052926
+  minY: 49.560693
