--- a/benchmark-framework/pom.xml
+++ b/benchmark-framework/pom.xml
@@ -189,6 +189,19 @@
 			<artifactId>jetty-util</artifactId>
 			<version>9.4.8.v20171121</version>
 		</dependency>
+
+		<dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+		<dependency>
+            <groupId>epl.pubsub.location.indexperf</groupId>
+            <artifactId>indexperf</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
