--- a/driver-pulsar/pulsar-temp.yaml
+++ b/driver-pulsar/pulsar-temp.yaml
@@ -22,12 +22,12 @@ driverClass: io.openmessaging.benchmark.driver.pulsar.PulsarBenchmarkDriver
 
 # Pulsar client-specific configuration
 client:
-  serviceUrl: pulsar://127.0.0.1:6650
-  httpUrl: http://127.0.0.1:8080
+  serviceUrl: pulsar://192.168.124.174:6650
+  httpUrl: http://192.168.124.174:8080
   ioThreads: 1
   connectionsPerBroker: 1
-  clusterName: standalone
-  cluster: standalone
+  clusterName: local
+  cluster: local
   namespacePrefix: benchmark/ns
   topicType: non_persistent
  # persistence:
