--- a/automation-config.yaml
+++ b/automation-config.yaml
@@ -14,7 +14,7 @@ parse:
 split:
   input_file: parsed/locations/static_27000_28000_locations.data
   output_dir: parsed/split/
-  num_workers: 2
+  num_workers: 5
 
 workload:
   topics: 1
@@ -36,7 +36,7 @@ index_config:
 automation:
   benchmark_home: "/home/surveillance/openmessaging-benchmark"
   pulsar_home: "/home/surveillance/pulsar"
-  broker: 192.168.124.238
-  clients: "192.168.124.112"
+  broker: 192.168.124.174
+  clients: "192.168.124.141 192.168.124.207 192.168.124.95 192.168.124.193 192.168.124.180"
   driver_config: pulsar-temp.yaml
   data_dir: "parsed/split"
