--- a/driver-pulsar/pulsar-temp.yaml
+++ b/driver-pulsar/pulsar-temp.yaml
@@ -28,7 +28,8 @@ client:
   connectionsPerBroker: 1
   clusterName: local
   cluster: local
-  namespacePrefix: benchmark/ns-random
+  createNamespace: false
+  namespacePrefix: benchmark/ns-namespace
   topicType: non_persistent
  # persistence:
  #   ensembleSize: 1 
