--- a/scripts/automation-config.yaml
+++ b/scripts/automation-config.yaml
@@ -1,20 +1,29 @@
 sumo:
   scenario: ../sumo/scenario/dua.static.sumocfg
   step_length: 1.0
-  fcd_output: ../sumo/output/fcd_output_static_27000_30000.txt
+  fcd_output: ../sumo/output/fcd_output_static_27000_37000.txt
   begin: 27000
-  end: 30000
+  end: 37000
 
-parse:
-  fcd_output: ../sumo/output/fcd_output_static_27000_30000.txt
-  ouput_dir: ../parsed/locations/static_27000_30000_locations.data
+parse_sumo:
+  fcd_output: ../sumo/output/fcd_output_static_27000_37000.txt
+  ouput_dir: /home/surveillance/openmessaging-benchmark/parsed/locations/static_27000_37000_locations.data
   low_time: 27000
-  high_time: 30000
+  high_time: 37000
+
+static_load:
+  numClients: 6
+  iterations: 200
+  minX: 33.7757
+  minY: 85.3963
+  maxX: 34.7757
+  maxY: 86.3963
+  outfile: /home/surveillance/openmessaging-benchmark/parsed/locations/static_locations_c_6_i_200.data
 
 split:
-  input_file: ../parsed/locations/static_47000_50000_locations.data
-  output_dir: ../parsed/split/
-  num_workers: 5
+  input_file: /home/surveillance/openmessaging-benchmark/parsed/locations/static_locations_c_6_i_200.data
+  output_dir: /home/surveillance/openmessaging-benchmark/parsed/split/
+  num_workers: 3
 
 workload:
   topics: 1
@@ -24,26 +33,21 @@ workload:
   consumerPerSubscription: 1
   producersPerTopic: 1
   producerRate: 50000
-  testDurationMinutes: 5
-  numClients: 10
+  testDurationMinutes: 3
+  numClients: 3
     
 index_config:
-  blockSize: 0.0001
+  blockSize: 0.001
   indexType: GEOHASH
-  minLat: 6.216835
-  minLng: 49.652556
-  maxLat: 6.031303
-  maxLng: 49.549368
+  minLat: 33.7757
+  minLng: 85.3963
+  maxLat: 34.7757
+  maxLng: 86.3963
 
 automation:
   benchmark_home: "/home/surveillance/openmessaging-benchmark"
   pulsar_home: "/home/surveillance/pulsar"
   broker: 192.168.124.174
-  clients: "192.168.124.141 192.168.124.207 192.168.124.95 192.168.124.193 192.168.124.180"
+  clients: "192.168.124.141 192.168.124.207 192.168.124.95"
   driver_config: pulsar-temp.yaml
   data_dir: "parsed/split"
-
-graphs:
-  indir: "output"
-  workers: 5
-  outdir: "output/graphs/static_40000_50000"
